# tp-cpp

./: CMakeLists.txt
.github/workflows/: main.yml  phw-1.yml  phw-2.yml
CMakeBuilding/: CMakeCache.txt
CMakeBuilding/project/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mytest
phw-2/: CMakeLists.txt
phw-2/project/: CMakeLists.txt
project/: CMakeLists.txt
project/include/: matrix.h  parcer.h  parcer_in_parallel.h  parcer_in_series.h
project/src/: main.c  matrix.c  parcer.c  parcer_in_parallel.c  parcer_in_series.c
project/test/: CMakeLists.txt
project/test/src/: test.cpp
project/tests/: CMakeLists.txt
project/tests/data/case_2/: output
project/tests/src/: test.cpp
